# SIGMOD2025

./: LICENSE  README.md
application/: CMakeLists.txt
application/include/: dominance-tests.hpp  graph-structural-operations.hpp  graph.hpp  group-skyline-concepts.hpp  listing-cousins-first.hpp  listing-danisch.hpp  ns-functions.hpp  postprocessing.hpp  sky-layers.hpp  spatial.hpp  timer.hpp  zhang19.hpp
application/src/: CMakeLists.txt  comparison-listing.cpp  graph-structural-operations.cpp  graph.cpp  group-skyline-concepts.cpp  listing-cousins-first.cpp  listing-danisch.cpp  main.cpp  ns-functions.cpp  sky-layers.cpp  spatial.cpp  zhang19.cpp
case-study/: case_study_kcore.ipynb
datasets/: README.md  preprocessing.ipynb
